fixed spacing issue between h1 and h2

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,13 @@
   color: crimson;
 }
 
+.onlyCenter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: crimson;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
